--- a/Newbie/profile-card-component-main/css/index.css
+++ b/Newbie/profile-card-component-main/css/index.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -23,17 +25,28 @@ ul {
   background-repeat: no-repeat;
   background-size: auto;
 }
+@media (max-width: 375px) {
+  .container {
+    background-position: left -764px top -559px, right -415px bottom -321px;
+    background-size: auto, 170%;
+  }
+}
 .container .card {
-  width: 330px;
+  width: 350px;
   height: 370px;
   border-radius: 15px;
   background-color: #fff;
-  box-shadow: 0 8px 90px 10px rgba(45, 50, 72, 0.26);
+  box-shadow: 0 15px 90px 10px rgba(45, 50, 72, 0.26);
+}
+@media (max-width: 375px) {
+  .container .card {
+    width: 330px;
+  }
 }
 .container .card__pattern {
   background-image: url(/images/bg-pattern-card.svg);
   width: auto;
-  height: 8em;
+  height: 8.2em;
   position: relative;
   z-index: 0;
   border-top-left-radius: 15px;
@@ -79,14 +92,14 @@ ul {
   letter-spacing: 0.1rem;
 }
 .container .attribution {
-  color: #0b6c75;
+  color: rgba(207, 220, 221, 0.527);
   font-size: 65%;
   position: relative;
   top: 5%;
 }
 .container .attribution a {
   text-decoration: none;
-  color: #0b6c75;
+  color: rgba(207, 220, 221, 0.527);
   transition: color 0.15s ease-in-out;
 }
 .container .attribution a:hover {
