--- a/Newbie/profile-card-component-main/css/index.scss
+++ b/Newbie/profile-card-component-main/css/index.scss
@@ -12,7 +12,7 @@ $drk-cyan: hsl(185, 75%, 39%);
 $drk-desat-blue: hsl(229, 23%, 23%);
 $drk-gray-blue: hsl(227, 10%, 46%);
 $drk-gray: hsl(0, 0%, 59%);
-$link: hsl(185, 83%, 25%);
+$link: hsla(184, 17%, 84%, 0.527);
 $shadow-clr: hsla(229, 23%, 23%, 0.26);
 
 // --layout
@@ -27,7 +27,9 @@ $bg-card: url(/images/bg-pattern-card.svg);
 $radius: 15px;
 // $shadow: ;
 
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -51,18 +53,27 @@ ul {
   background-repeat: no-repeat;
   background-size: auto;
 
+  @media (max-width: $mobile) {
+    background-position: left -764px top -559px, right -415px bottom -321px;
+    background-size: auto, 170%;
+  }
+
   .card {
-    width: 330px;
+    width: 350px;
     height: 370px;
     border-radius: $radius;
     background-color: #fff;
     //h-offset v-offset blur spread color
-    box-shadow: 0 8px 90px 10px $shadow-clr;
+    box-shadow: 0 15px 90px 10px $shadow-clr;
+
+    @media (max-width: $mobile) {
+      width: 330px;
+    }
 
     &__pattern {
       background-image: $bg-card;
       width: auto;
-      height: 8em;
+      height: 8.2em;
       position: relative;
       z-index: 0;
       border-top-left-radius: $radius;
