adjust stats' padding

--- a/Newbie/profile-card-component-main/css/index.css
+++ b/Newbie/profile-card-component-main/css/index.css
@@ -77,7 +77,7 @@ ul {
   font-weight: 400;
 }
 .container .card .profile__value > p {
-  padding-top: 0.5em;
+  padding-top: 0.3em;
   font-size: 0.7rem;
 }
 .container .card .profile__stats {
@@ -85,8 +85,7 @@ ul {
   justify-content: space-around;
   align-items: center;
   text-align: center;
-  gap: 2em;
-  padding: 1.3em;
+  padding: 1.2em 1.6em;
   border-top: 0.7px solid lightgrey;
   width: 100%;
   letter-spacing: 0.1rem;
