set and define scss variables for images

--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
@@ -14,6 +14,17 @@ $accent--mod-cyan: hsl(170, 45%, 43%);
 $neut--lght-g-blue: hsl(240, 75%, 98%);
 $net--lght-gray: hsl(0, 0%, 75%);
 
+$logo: url(../images/logo.svg);
+$avatar: url(../images/avatar-testimonial.jpg);
+$bg-desktop-curve: url(../images/bg-curve-desktop.svg);
+$bg-mobile-curve: url(../images/bg-curve-desktop.svg);
+$icon-arrow: url(../images/icon-arrow.svg);
+$icon-email: url(../images/icon-email.svg);
+$icon-phone: url(../images/icon-phone.svg);
+$icon-quotes: url(../images/icon-quotes.svg);
+$illu-1: url(../images/illustration-1.svg);
+$illu-2: url(../images/illustration-2.svg);
+
 *,
 *::after,
 *::before {
