--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/index.css
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/index.css
@@ -8,11 +8,7 @@
           box-sizing: border-box;
 }
 
-.container {
-  padding: 0 5em;
-}
-
-.container .header {
+.header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -23,24 +19,25 @@
       -ms-flex-align: center;
           align-items: center;
   height: 20vh;
+  padding: 0 5em;
 }
 
-.container .header__logo {
+.header__logo {
   height: 30%;
   width: auto;
 }
 
-.container .header__logo img {
+.header__logo img {
   height: 100%;
 }
 
-.container .header__nav {
+.header__nav {
   width: 22%;
   font-family: "Open Sans", sans-serif;
   font-size: 1.2rem;
 }
 
-.container .header__nav ul {
+.header__nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -50,13 +47,13 @@
           justify-content: space-between;
 }
 
-.container .header__nav ul .item__link {
+.header__nav ul .item__link {
   text-decoration: none;
   color: #585989;
 }
 
-.container .hero {
-  height: 68vh;
+.hero {
+  height: 80vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -67,9 +64,10 @@
       -ms-flex-align: center;
           align-items: center;
   gap: 1em;
+  padding: 0 5em;
 }
 
-.container .hero__left {
+.hero__left {
   text-align: left;
   width: 50%;
   padding-right: 3.5em;
@@ -78,29 +76,29 @@
   color: #070439;
 }
 
-.container .hero__left .title {
+.hero__left .title {
   font-family: "Raleway", sans-serif;
   font-size: 2.7rem;
   line-height: 4rem;
   padding-bottom: 0.4em;
 }
 
-.container .hero__left .para {
+.hero__left .para {
   font-family: "Open Sans", sans-serif;
   font-size: 1.2rem;
   padding-bottom: 1.5em;
 }
 
-.container .hero__left .form {
+.hero__left .form {
   width: 100%;
   height: 3.2em;
 }
 
-.container .hero__left .form__email, .container .hero__left .form__btn {
+.hero__left .form__email, .hero__left .form__btn {
   height: 100%;
 }
 
-.container .hero__left .form__email {
+.hero__left .form__email {
   width: 55%;
   border: 1px solid #585989;
   border-radius: 3px;
@@ -109,27 +107,27 @@
   font-family: "Open Sans", sans-serif;
 }
 
-.container .hero__left .form__email::-webkit-input-placeholder {
+.hero__left .form__email::-webkit-input-placeholder {
   color: #bfbfbf;
   font-size: 1rem;
 }
 
-.container .hero__left .form__email:-ms-input-placeholder {
+.hero__left .form__email:-ms-input-placeholder {
   color: #bfbfbf;
   font-size: 1rem;
 }
 
-.container .hero__left .form__email::-ms-input-placeholder {
+.hero__left .form__email::-ms-input-placeholder {
   color: #bfbfbf;
   font-size: 1rem;
 }
 
-.container .hero__left .form__email::placeholder {
+.hero__left .form__email::placeholder {
   color: #bfbfbf;
   font-size: 1rem;
 }
 
-.container .hero__left .form__btn {
+.hero__left .form__btn {
   width: 32%;
   background-color: #3065f8;
   border: none;
@@ -140,16 +138,49 @@
   transition: background 0.15s ease-in-out;
 }
 
-.container .hero__left .form__btn:hover {
+.hero__left .form__btn:hover {
   background: #517df5;
   cursor: pointer;
 }
 
-.container .hero__right {
+.hero__right {
   width: 50%;
 }
 
-.container .hero__right img {
+.hero__right img {
+  width: 100%;
+  height: auto;
+}
+
+.midway {
+  border: 1px dashed red;
+  padding: 0 5em;
+  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 1em;
+  background-image: url(../images/bg-curve-desktop.svg);
+  background-repeat: no-repeat;
+  background-size: 300% 100%;
+  background-position: top;
+}
+
+.midway__left {
+  width: 50%;
+}
+
+.midway__right {
+  width: 50%;
+}
+
+.midway__right img {
   width: 100%;
   height: auto;
 }
