--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
@@ -28,120 +28,149 @@ $test: 1px dashed red;
   box-sizing: border-box;
 }
 
-.container {
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 20vh;
   padding: 0 5em;
 
-  .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 20vh;
+  &__logo {
+    height: 30%;
+    width: auto;
 
-    &__logo {
-      height: 30%;
-      width: auto;
+    img {
+      height: 100%;
+    }
+  }
 
-      img {
-        height: 100%;
+  &__nav {
+    width: 22%;
+    font-family: $body-ff;
+    font-size: 1.2rem;
+
+    ul {
+      display: flex;
+      list-style: none;
+      justify-content: space-between;
+
+      .item {
+        &__link {
+          text-decoration: none;
+          color: $prim--desat-blue;
+        }
       }
     }
+  }
+}
 
-    &__nav {
-      width: 22%;
+.hero {
+  height: 80vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1em;
+  padding: 0 5em;
+
+  &__left {
+    text-align: left;
+    width: 50%;
+    padding-right: 3.5em;
+    position: relative;
+    top: -5%;
+    color: $prim--v-drk-blue;
+
+    .title {
+      font-family: $headings-ff;
+      font-size: 2.7rem;
+      line-height: 4rem;
+      padding-bottom: 0.4em;
+    }
+
+    .para {
       font-family: $body-ff;
       font-size: 1.2rem;
+      padding-bottom: 1.5em;
+    }
 
-      ul {
-        display: flex;
-        list-style: none;
-        justify-content: space-between;
+    .form {
+      // border: $test;
+      width: 100%;
+      height: 3.2em;
 
-        .item {
-          &__link {
-            text-decoration: none;
-            color: $prim--desat-blue;
-          }
+      &__email,
+      &__btn {
+        height: 100%;
+      }
+
+      &__email {
+        width: 55%;
+
+        border: 1px solid $prim--desat-blue;
+        border-radius: 3px;
+        padding: 1em;
+        margin-right: 1em;
+        font-family: $body-ff;
+
+        &::placeholder {
+          color: $net--lght-gray;
+          font-size: 1rem;
+        }
+      }
+
+      &__btn {
+        width: 32%;
+        background-color: $accent--br-blue;
+        border: none;
+        border-radius: 3px;
+        color: #fff;
+        font-size: 1rem;
+        transition: background 0.15s ease-in-out;
+
+        &:hover {
+          background: $accent--br-blue-hover;
+          cursor: pointer;
         }
       }
     }
   }
 
-  .hero {
-    height: 68vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 1em;
-
-    &__left {
-      text-align: left;
-      width: 50%;
-      padding-right: 3.5em;
-      position: relative;
-      top: -5%;
-      color: $prim--v-drk-blue;
-
-      .title {
-        font-family: $headings-ff;
-        font-size: 2.7rem;
-        line-height: 4rem;
-        padding-bottom: 0.4em;
-      }
-
-      .para {
-        font-family: $body-ff;
-        font-size: 1.2rem;
-        padding-bottom: 1.5em;
-      }
-
-      .form {
-        // border: $test;
-        width: 100%;
-        height: 3.2em;
-
-        &__email,
-        &__btn {
-          height: 100%;
-        }
-
-        &__email {
-          width: 55%;
-
-          border: 1px solid $prim--desat-blue;
-          border-radius: 3px;
-          padding: 1em;
-          margin-right: 1em;
-          font-family: $body-ff;
-
-          &::placeholder {
-            color: $net--lght-gray;
-            font-size: 1rem;
-          }
-        }
-
-        &__btn {
-          width: 32%;
-          background-color: $accent--br-blue;
-          border: none;
-          border-radius: 3px;
-          color: #fff;
-          font-size: 1rem;
-          transition: background 0.15s ease-in-out;
-
-          &:hover {
-            background: $accent--br-blue-hover;
-            cursor: pointer;
-          }
-        }
-      }
+  &__right {
+    width: 50%;
+    img {
+      width: 100%;
+      height: auto;
     }
+  }
+}
 
-    &__right {
-      width: 50%;
-      img {
-        width: 100%;
-        height: auto;
-      }
+.midway {
+  border: $test;
+  padding: 0 5em;
+
+  height: 100vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1em;
+
+  background: {
+    image: $bg-desktop-curve;
+    repeat: no-repeat;
+    size: 300% 100%;
+    position: top;
+  }
+
+  &__left {
+    width: 50%;
+  }
+
+  &__right {
+    width: 50%;
+
+    img {
+      width: 100%;
+      height: auto;
     }
   }
 }
