--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
@@ -94,7 +94,6 @@ $test: 1px dashed red;
     }
 
     .form {
-      // border: $test;
       width: 100%;
       height: 3.2em;
 
@@ -146,9 +145,9 @@ $test: 1px dashed red;
 
 .midway {
   border: $test;
-  padding: 0 5em;
 
   height: 100vh;
+  padding: 5em 5em 0 5em;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -157,16 +156,86 @@ $test: 1px dashed red;
   background: {
     image: $bg-desktop-curve;
     repeat: no-repeat;
-    size: 300% 100%;
-    position: top;
+    size: 310% 95%;
+    position: bottom;
   }
 
   &__left {
-    width: 50%;
+    width: 55%;
+
+    .title {
+      font-family: $headings-ff;
+      font-size: 2.7rem;
+      line-height: 4rem;
+      padding-bottom: 0.4em;
+    }
+
+    .para {
+      font-family: $body-ff;
+      font-size: 1.2rem;
+      padding-bottom: 1.5em;
+      padding-right: 6em;
+    }
+
+    .link {
+      font-family: $body-ff;
+      font-size: 1.2rem;
+      // margin-bottom: 1.5em;
+      color: $accent--mod-cyan;
+
+      span {
+        img {
+          height: 20px;
+          width: auto;
+        }
+      }
+    }
+
+    .card {
+      background-color: #fff;
+      border-radius: 5px;
+      width: 400px;
+      height: auto;
+      padding: 1.5em;
+      margin-top: 3em;
+      box-shadow: 0 2px 10px 2px rgba(233, 233, 233, 0.8);
+
+      &__p {
+        font-family: $body-ff;
+        font-size: 1rem;
+      }
+
+      &__source {
+        // border: $test;
+        display: grid;
+        grid-template-columns: 0.2fr 1fr;
+        margin-top: 1em;
+
+        .avatar {
+          border-radius: 50%;
+          width: 50px;
+          height: auto;
+        }
+
+        .avatar-title {
+          align-self: center;
+          h5 {
+            font-family: $headings-ff;
+            font-weight: 700;
+          }
+
+          p {
+            font-family: $body-ff;
+            font-size: 0.8rem;
+            line-height: 1rem;
+          }
+        }
+      }
+    }
   }
 
   &__right {
-    width: 50%;
+    width: 45%;
 
     img {
       width: 100%;
