--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/index.css
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/index.css
@@ -1,258 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&family=Raleway:wght@400;700&display=swap");
 *,
-*::after,
-*::before {
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
 
-.header {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  height: 20vh;
-  padding: 0 5em;
-}
-
-.header__logo {
-  height: 30%;
-  width: auto;
-}
-
-.header__logo img {
-  height: 100%;
-}
-
-.header__nav {
-  width: 22%;
+.h1 {
   font-family: "Open Sans", sans-serif;
-  font-size: 1.2rem;
-}
-
-.header__nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.header__nav ul .item__link {
-  text-decoration: none;
-  color: #585989;
-}
-
-.hero {
-  height: 80vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 1em;
-  padding: 0 5em;
-}
-
-.hero__left {
-  text-align: left;
-  width: 50%;
-  padding-right: 3.5em;
-  position: relative;
-  top: -5%;
-  color: #070439;
-}
-
-.hero__left .title {
-  font-family: "Raleway", sans-serif;
-  font-size: 2.7rem;
-  line-height: 4rem;
-  padding-bottom: 0.4em;
-}
-
-.hero__left .para {
-  font-family: "Open Sans", sans-serif;
-  font-size: 1.2rem;
-  padding-bottom: 1.5em;
-}
-
-.hero__left .form {
-  width: 100%;
-  height: 3.2em;
-}
-
-.hero__left .form__email, .hero__left .form__btn {
-  height: 100%;
-}
-
-.hero__left .form__email {
-  width: 55%;
-  border: 1px solid #585989;
-  border-radius: 3px;
-  padding: 1em;
-  margin-right: 1em;
-  font-family: "Open Sans", sans-serif;
-}
-
-.hero__left .form__email::-webkit-input-placeholder {
-  color: #bfbfbf;
-  font-size: 1rem;
-}
-
-.hero__left .form__email:-ms-input-placeholder {
-  color: #bfbfbf;
-  font-size: 1rem;
-}
-
-.hero__left .form__email::-ms-input-placeholder {
-  color: #bfbfbf;
-  font-size: 1rem;
-}
-
-.hero__left .form__email::placeholder {
-  color: #bfbfbf;
-  font-size: 1rem;
-}
-
-.hero__left .form__btn {
-  width: 32%;
-  background-color: #3065f8;
-  border: none;
-  border-radius: 3px;
-  color: #fff;
-  font-size: 1rem;
-  -webkit-transition: background 0.15s ease-in-out;
-  transition: background 0.15s ease-in-out;
-}
-
-.hero__left .form__btn:hover {
-  background: #517df5;
-  cursor: pointer;
-}
-
-.hero__right {
-  width: 50%;
-}
-
-.hero__right img {
-  width: 100%;
-  height: auto;
-}
-
-.midway {
-  height: 100vh;
-  padding: 5em 5em 0 5em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 1em;
-  background-image: url(../images/bg-curve-desktop.svg);
-  background-repeat: no-repeat;
-  background-size: 310% 95%;
-  background-position: bottom;
-}
-
-.midway__left {
-  width: 55%;
-}
-
-.midway__left .title {
-  font-family: "Raleway", sans-serif;
-  font-size: 2.7rem;
-  line-height: 4rem;
-  padding-bottom: 0.4em;
-}
-
-.midway__left .para {
-  font-family: "Open Sans", sans-serif;
-  font-size: 1.2rem;
-  padding-bottom: 1.5em;
-  padding-right: 6em;
-}
-
-.midway__left .link {
-  font-family: "Open Sans", sans-serif;
-  font-size: 1.2rem;
-  color: #3c9f8f;
-}
-
-.midway__left .link span img {
-  height: 20px;
-  width: auto;
-}
-
-.midway__left .card {
-  background-color: #fff;
-  border-radius: 5px;
-  width: 400px;
-  height: auto;
-  padding: 1.5em;
-  margin-top: 3em;
-  -webkit-box-shadow: 0 2px 10px 2px rgba(233, 233, 233, 0.8);
-          box-shadow: 0 2px 10px 2px rgba(233, 233, 233, 0.8);
-}
-
-.midway__left .card__p {
-  font-family: "Open Sans", sans-serif;
-  font-size: 1rem;
-}
-
-.midway__left .card__source {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 0.2fr 1fr;
-      grid-template-columns: 0.2fr 1fr;
-  margin-top: 1em;
-}
-
-.midway__left .card__source .avatar {
-  border-radius: 50%;
-  width: 50px;
-  height: auto;
-}
-
-.midway__left .card__source .avatar-title {
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
-}
-
-.midway__left .card__source .avatar-title h5 {
-  font-family: "Raleway", sans-serif;
-  font-weight: 700;
-}
-
-.midway__left .card__source .avatar-title p {
-  font-family: "Open Sans", sans-serif;
-  font-size: 0.8rem;
-  line-height: 1rem;
-}
-
-.midway__right {
-  width: 45%;
-}
-
-.midway__right img {
-  width: 100%;
-  height: auto;
 }
 /*# sourceMappingURL=index.css.map */
