Create mixins scss file to set reiterative stylings of the website's theme

--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/_variables.scss
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/_variables.scss
@@ -11,9 +11,11 @@ $primary-drk-blue: hsl(243, 87%, 12%);
 $primary-desat-blue: hsl(238, 22%, 44%);
 $accent-blue: hsl(224, 93%, 58%);
 $accent-cyan: hsl(170, 45%, 43%);
-$accent-blue-hover: mix($accent-blue, #fff, 20%);
-$accent-blue-hover: mix($accent-cyan, #fff, 20%);
+$accent-blue-hover: mix($accent-blue, #fff, 80%);
+$accent-cyan-hover: mix($accent-cyan, #fff, 80%);
 $neutral-light-blue: hsl(240, 75%, 98%);
 $neutral-light-gray: hsl(0, 0%, 75%);
+
+$shadow: 0 2.5px 7px $neutral-light-gray;
 
 $test: 1px dashed red;
