--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
@@ -8,6 +8,22 @@
   box-sizing: border-box;
 }
 
-.h1 {
-  font-family: $ff-body;
+h2 {
+  @include fylo-title(3, $primary-drk-blue);
+}
+
+h3 {
+  @include fylo-title(1.5, pink);
+}
+
+.text {
+  @include fylo-text($primary-drk-blue);
+}
+
+.btn {
+  @include fylo-btn;
+}
+
+.scene {
+  @include scene;
 }
