--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/index.css
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/index.css
@@ -8,48 +8,8 @@
           box-sizing: border-box;
 }
 
-h2 {
-  color: #070439;
-  font-family: "Raleway", sans-serif;
-  font-size: 3rem;
-  line-height: 4.5rem;
-}
-
-h3 {
-  color: pink;
-  font-family: "Raleway", sans-serif;
-  font-size: 1.5rem;
-  line-height: 2.25rem;
-}
-
-.text {
-  color: #070439;
-  font-family: "Open Sans", sans-serif;
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
-.btn {
-  background-color: #3065f8;
-  color: #fff;
-  font-family: "Raleway", sans-serif;
-  font-size: 0.9rem;
-  height: 5vmin;
-  width: 22vmin;
-  border: none;
-  border-radius: 3px;
-  -webkit-box-shadow: 0 2.5px 7px #bfbfbf;
-          box-shadow: 0 2.5px 7px #bfbfbf;
-  -webkit-transition: background-color 0.1s ease-in-out;
-  transition: background-color 0.1s ease-in-out;
-}
-
-.btn:hover {
-  cursor: pointer;
-  background-color: #5a84f9;
-}
-
 .scene {
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
