--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/index.css
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/index.css
@@ -12,6 +12,7 @@
   height: 100vh;
   position: relative;
   z-index: 0;
+  background-color: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -22,6 +23,7 @@
       -ms-flex-align: center;
           align-items: center;
   padding: 0 5em;
+  gap: 1em;
 }
 
 .scene .header {
@@ -47,6 +49,15 @@
   background-color: #fff;
 }
 
+.scene .header .logo {
+  height: 2.4em;
+  width: auto;
+}
+
+.scene .header .logo img {
+  height: 100%;
+}
+
 .scene .header .nav ul {
   padding-left: 0;
   list-style: none;
@@ -66,7 +77,8 @@
   color: #585989;
   font-family: "Open Sans", sans-serif;
   font-size: 1.2rem;
-  line-height: 1.5rem;
+  line-height: 1.8rem;
+  margin-bottom: 1.5em;
 }
 
 .scene .header .nav__link {
@@ -79,5 +91,99 @@
 
 .scene .header .nav__link:visited {
   color: #585989;
+}
+
+.scene .content {
+  width: 50%;
+}
+
+.scene .content__title {
+  color: #070439;
+  font-family: "Raleway", sans-serif;
+  font-size: 2.8rem;
+  font-weight: 700;
+  line-height: 4.2rem;
+  margin-bottom: 0.5em;
+}
+
+.scene .content__text {
+  color: #070439;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
+  margin-bottom: 1.5em;
+}
+
+.scene .content__cta {
+  height: 3.2em;
+  width: 85%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.scene .content__cta input {
+  height: 100%;
+}
+
+.scene .content__cta input[type="email"] {
+  width: 58%;
+  padding: 1em;
+  margin-right: 0.2em;
+  border: 1px solid #070439;
+  border-radius: 3px;
+}
+
+.scene .content__cta input[type="email"]::-webkit-input-placeholder {
+  font-size: 1rem;
+  color: #bfbfbf;
+}
+
+.scene .content__cta input[type="email"]:-ms-input-placeholder {
+  font-size: 1rem;
+  color: #bfbfbf;
+}
+
+.scene .content__cta input[type="email"]::-ms-input-placeholder {
+  font-size: 1rem;
+  color: #bfbfbf;
+}
+
+.scene .content__cta input[type="email"]::placeholder {
+  font-size: 1rem;
+  color: #bfbfbf;
+}
+
+.scene .content__cta input[type="submit"] {
+  background-color: #3065f8;
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+  font-size: 0.9rem;
+  font-weight: 700;
+  height: 100%;
+  width: 25vmin;
+  border: none;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 2.5px 7px #bfbfbf;
+          box-shadow: 0 2.5px 7px #bfbfbf;
+  -webkit-transition: background-color 0.1s ease-in-out;
+  transition: background-color 0.1s ease-in-out;
+}
+
+.scene .content__cta input[type="submit"]:hover {
+  cursor: pointer;
+  background-color: #5a84f9;
+}
+
+.scene .illu {
+  width: 50%;
+}
+
+.scene .illu img {
+  width: 100%;
+  height: auto;
 }
 /*# sourceMappingURL=index.css.map */
