--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
@@ -12,8 +12,10 @@
   height: 100vh;
   position: relative;
   z-index: 0;
+  background-color: #fff;
 
   @include scene;
+  gap: 1em;
 
   .header {
     height: 20vh;
@@ -27,6 +29,15 @@
     z-index: 1;
 
     background-color: #fff;
+
+    .logo {
+      height: 2.4em;
+      width: auto;
+
+      img {
+        height: 100%;
+      }
+    }
 
     .nav {
       ul {
@@ -55,4 +66,56 @@
       }
     }
   }
+
+  .content {
+    width: 50%;
+
+    &__title {
+      @include fylo-title(2.8, $primary-drk-blue);
+    }
+
+    &__text {
+      @include fylo-text($primary-drk-blue);
+    }
+
+    &__cta {
+      height: 3.2em;
+      width: 85%;
+      display: flex;
+      justify-content: space-between;
+
+      input {
+        height: 100%;
+      }
+
+      input[type="email"] {
+        width: 58%;
+        padding: 1em;
+        margin-right: 0.2em;
+        border: 1px solid $primary-drk-blue;
+        border-radius: 3px;
+
+        &::placeholder {
+          font-size: 1rem;
+          color: $neutral-light-gray;
+        }
+      }
+
+      input[type="submit"] {
+        @include fylo-btn;
+      }
+    }
+  }
+
+  .illu {
+    width: 50%;
+
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+
+.scene-2 {
 }
