--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/index.css
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/index.css
@@ -186,4 +186,122 @@
   width: 100%;
   height: auto;
 }
+
+.scene-2 {
+  background-image: url(../images/bg-curve-desktop.svg);
+  background-repeat: no-repeat;
+  background-size: 300vmax 95vh;
+  background-position: center bottom;
+  padding-top: 10em;
+}
+
+.scene-2 .content {
+  width: 60%;
+}
+
+.scene-2 .content__text {
+  padding-right: 10em;
+  margin-bottom: 1em;
+}
+
+.scene-2 .content__link {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  border-bottom: 1px solid #3c9f8f;
+  -webkit-transition: all 0.15s ease-in-out;
+  transition: all 0.15s ease-in-out;
+  margin-bottom: 3em !important;
+  color: #3c9f8f;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
+  margin-bottom: 1.5em;
+}
+
+.scene-2 .content__link a {
+  text-decoration: none;
+}
+
+.scene-2 .content__link a:visited {
+  color: #3c9f8f;
+}
+
+.scene-2 .content__link img {
+  height: 100%;
+  width: auto;
+  vertical-align: middle;
+}
+
+.scene-2 .content__link:hover {
+  color: #50a99a !important;
+}
+
+.scene-2 .illu {
+  width: 40%;
+}
+
+.card {
+  background-color: #fff;
+  padding: 2em 2.5em;
+  width: 45%;
+  border-radius: 5px;
+  -webkit-box-shadow: 0 2.5px 7px #bfbfbf;
+          box-shadow: 0 2.5px 7px #bfbfbf;
+}
+
+.card__icon {
+  margin-bottom: 0.5em;
+  width: 1em;
+}
+
+.card__text {
+  color: #070439;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.2rem;
+  line-height: 1.8rem;
+  margin-bottom: 1.5em;
+  font-size: 0.9rem;
+  line-height: 1.5rem;
+}
+
+.card .source {
+  height: 3em;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 0.2fr 1fr;
+      grid-template-columns: 0.2fr 1fr;
+  -ms-grid-rows: 1fr;
+      grid-template-rows: 1fr;
+}
+
+.card .source__avatar {
+  border-radius: 50%;
+  height: 45px;
+}
+
+.card .source__client,
+.card .source .client {
+  padding-left: 1em;
+  font-family: "Raleway", sans-serif;
+  font-size: 0.8rem;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.card .source__client__name,
+.card .source .client__name {
+  font-weight: 700;
+  color: #070439;
+  line-height: 1.5rem;
+}
+
+.card .source__client__title,
+.card .source .client__title {
+  font-size: 0.5rem;
+}
 /*# sourceMappingURL=index.css.map */
