--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
@@ -118,4 +118,100 @@
 }
 
 .scene-2 {
+  background-image: $bg-desktop;
+  background-repeat: no-repeat;
+  background-size: 300vmax 95vh;
+  background-position: center bottom;
+  padding-top: 10em;
+
+  .content {
+    width: 60%;
+
+    &__text {
+      padding-right: 10em;
+      margin-bottom: 1em;
+    }
+
+    &__link {
+      width: fit-content;
+      height: fit-content;
+      border-bottom: 1px solid $accent-cyan;
+      transition: all 0.15s ease-in-out;
+      margin-bottom: 3em !important;
+
+      @include fylo-text($accent-cyan);
+
+      a {
+        text-decoration: none;
+
+        &:visited {
+          color: $accent-cyan;
+        }
+      }
+
+      img {
+        height: 100%;
+        width: auto;
+        vertical-align: middle;
+      }
+
+      &:hover {
+        color: $accent-cyan-hover !important;
+      }
+    }
+  }
+
+  .illu {
+    width: 40%;
+  }
+}
+
+.card {
+  background-color: #fff;
+  padding: 2em 2.5em;
+  width: 45%;
+  border-radius: 5px;
+  box-shadow: $shadow;
+
+  &__icon {
+    margin-bottom: 0.5em;
+    width: 1em;
+  }
+
+  &__text {
+    @include fylo-text($primary-drk-blue);
+    font-size: 0.9rem;
+    line-height: 1.5rem;
+  }
+
+  .source {
+    height: 3em;
+
+    display: grid;
+    grid-template-columns: 0.2fr 1fr;
+    grid-template-rows: 1fr;
+
+    &__avatar {
+      border-radius: 50%;
+      height: 45px;
+    }
+
+    &__client,
+    .client {
+      padding-left: 1em;
+      font-family: $ff-headings;
+      font-size: 0.8rem;
+      align-self: center;
+
+      &__name {
+        font-weight: 700;
+        color: $primary-drk-blue;
+        line-height: 1.5rem;
+      }
+
+      &__title {
+        font-size: 0.5rem;
+      }
+    }
+  }
 }
