Set background color of CTA and footer section

--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/_variables.scss
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/_variables.scss
@@ -17,6 +17,8 @@ $accent-blue-hover: mix($accent-blue, #fff, 80%);
 $accent-cyan-hover: mix($accent-cyan, #fff, 90%);
 $neutral-light-blue: hsl(240, 75%, 98%);
 $neutral-light-gray: hsl(0, 0%, 75%);
+$bg-cta: rgba(87, 89, 137, 255);
+$bg-footer: rgba(7, 4, 59, 255);
 
 $shadow: 0 2.5px 7px $neutral-light-gray;
 
