--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/index.scss
@@ -215,3 +215,14 @@
     }
   }
 }
+
+.cta {
+  background-color: $bg-cta;
+  height: 38.5vh;
+}
+
+.footer {
+  background-color: $bg-footer;
+  padding: 0 $d-px;
+  height: 47vh;
+}
