--- a/Junior/fylo-landing-page-with-two-column-layout-master/css/index.css
+++ b/Junior/fylo-landing-page-with-two-column-layout-master/css/index.css
@@ -304,4 +304,15 @@
 .card .source .client__title {
   font-size: 0.5rem;
 }
+
+.cta {
+  background-color: #575989;
+  height: 38.5vh;
+}
+
+.footer {
+  background-color: #07043b;
+  padding: 0 5em;
+  height: 47vh;
+}
 /*# sourceMappingURL=index.css.map */
