--- a/Newbie/intro-component-with-signup-form-master/css/index.css
+++ b/Newbie/intro-component-with-signup-form-master/css/index.css
@@ -3,8 +3,8 @@
 :root {
   --ff: "Poppins", Arial, Helvetica, sans-serif;
   --base-fs: 1rem; /* 16px */
-  --bg-img-desktop: url(.././images/bg-intro-desktop.png);
-  --bg-img-mobile: url(.././images/bg-intro-mobile.png);
+  --bg-img-desktop: url(../../images/bg-intro-desktop.png);
+  --bg-img-mobile: url(../../images/bg-intro-mobile.png);
   --color-primary: hsl(0, 100%, 74%);
   --color-secondary: hsl(154, 59%, 51%);
   --color-accent: hsl(248, 32%, 49%);
@@ -18,4 +18,23 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+/* mobile first */
+body {
+  font-family: var(--ff);
+
+  background-color: var(--color-primary);
+  background-image: var(--bg-img-mobile);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-position: center;
+}
+
+/* tablet, desktop */
+@media (min-width: 600px) {
+  body {
+    background-image: var(--bg-img-desktop);
+  }
 }
