--- a/Newbie/intro-component-with-signup-form-master/css/index.css
+++ b/Newbie/intro-component-with-signup-form-master/css/index.css
@@ -32,6 +32,18 @@ body {
   background-position: center;
 }
 
+.container {
+  height: 100vh;
+  width: 100%;
+  padding: 3.5em 1.5em;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  color: #fff;
+}
+
 /* tablet, desktop */
 @media (min-width: 600px) {
   body {
