--- a/Newbie/intro-component-with-signup-form-master/css/index.css
+++ b/Newbie/intro-component-with-signup-form-master/css/index.css
@@ -3,13 +3,18 @@
 :root {
   --ff: "Poppins", Arial, Helvetica, sans-serif;
   --base-fs: 1rem; /* 16px */
+
   --bg-img-desktop: url(../../images/bg-intro-desktop.png);
   --bg-img-mobile: url(../../images/bg-intro-mobile.png);
+
   --color-primary: hsl(0, 100%, 74%);
   --color-secondary: hsl(154, 59%, 51%);
   --color-accent: hsl(248, 32%, 49%);
   --color-neutral-dark: hsl(249, 10%, 26%);
   --color-neutral-light: hsl(246, 25%, 77%);
+
+  --radius: 0.5em;
+  --shadow: 0 7px hsla(249, 10%, 26%, 0.25);
 }
 
 *,
@@ -30,6 +35,14 @@ body {
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
+}
+
+.bold {
+  font-weight: 700;
+}
+
+.theme-red {
+  color: var(--color-primary);
 }
 
 .container {
@@ -60,6 +73,76 @@ body {
   font-weight: 400;
 }
 
+.cta {
+  /* border: 1px solid red; */
+}
+
+.cta__detail {
+  background-color: var(--color-accent);
+  border-radius: var(--radius);
+  box-shadow: var(--shadow);
+
+  padding: 1.5em 5.1em;
+  margin-bottom: 1.8em;
+
+  text-align: center;
+  font-size: calc(var(--base-fs) - 0.2rem);
+  font-weight: 400;
+}
+
+.form {
+  background-color: #fff;
+  border-radius: var(--radius);
+  box-shadow: var(--shadow);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  gap: 0.8em;
+
+  padding: 1.2em;
+}
+
+.form__input {
+  height: 3em;
+}
+
+.form__input input {
+  border: 1px solid rgba(211, 211, 211, 0.547);
+  border-radius: 0.3em;
+  width: 100%;
+  height: 100%;
+
+  padding-left: 1.5em;
+
+  font-family: var(--ff);
+  font-weight: 500;
+  color: var(--color-neutral-dark);
+}
+
+.form__input input::placeholder {
+  font-weight: 500;
+}
+
+.form__icon {
+  /* ERROR ICON */
+  display: none;
+}
+
+.form__errormsg {
+  display: none;
+  color: red;
+}
+
+.form__ts {
+  color: var(--color-neutral-light);
+  font-size: calc(var(--base-fs) - 0.35rem);
+  font-weight: 500;
+  text-align: center;
+  padding: 0 2.5em;
+}
+
 /* tablet, desktop */
 @media (min-width: 600px) {
   body {
@@ -70,4 +153,16 @@ body {
     flex-direction: row;
     padding: 10em;
   }
+
+  /* .info {} */
+
+  /* .info__title {} */
+
+  /* .info__description {} */
+
+  /* .cta {} */
+
+  /* .cta__detail {} */
+
+  /* .form {} */
 }
