--- a/Newbie/intro-component-with-signup-form-master/css/index.css
+++ b/Newbie/intro-component-with-signup-form-master/css/index.css
@@ -39,6 +39,24 @@ body {
   background-position: center;
 }
 
+footer {
+  padding: 1.5em;
+  font-size: calc(var(--base-fs) - 0.3em);
+  text-align: center;
+  opacity: 0.7;
+}
+
+footer a:link,
+footer a:visited {
+  text-decoration: none;
+  color: #fff;
+  transition: text-decoration 0.15s ease-in-out;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
+
 .bold {
   font-weight: 700;
 }
@@ -55,6 +73,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  gap: 10%;
 
   color: #fff;
 }
