--- a/Newbie/intro-component-with-signup-form-master/css/index.css
+++ b/Newbie/intro-component-with-signup-form-master/css/index.css
@@ -202,6 +202,13 @@ footer a:hover {
     padding: 10em;
   }
 
+  footer {
+    position: absolute;
+    bottom: 4.5%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
   /* .info {} */
 
   /* .info__title {} */
