--- a/Newbie/intro-component-with-signup-form-master/css/index.css
+++ b/Newbie/intro-component-with-signup-form-master/css/index.css
@@ -175,15 +175,15 @@ footer a:hover {
 }
 
 .form__errormsg {
-  /* display: block; */
-  display: none;
+  display: block;
+  /* display: none; */
 
   color: red;
   text-align: right;
   font-style: italic;
   font-size: 2.8vmin;
 
-  margin: 0.5em 0 1.2em 0;
+  margin: -1em 0 1.5em 0;
 }
 
 .form__btn {
