--- a/Junior/advice-generator-app-main/css/style.css
+++ b/Junior/advice-generator-app-main/css/style.css
@@ -10,6 +10,9 @@
 
   --ff: "Manrope", sans-serif;
   --fs-base: 1.75rem; /* 28px */
+
+  --divider-mobile: url(/images/pattern-divider-mobile.svg);
+  --divider-dekstop: url(/images/pattern-divider-desktop.svg);
 }
 
 *,
@@ -44,6 +47,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 
   padding: 2em;
 }
@@ -61,6 +65,22 @@ body {
 }
 
 /* .card__number{} */
+
+.card__advice {
+  border: 1px dashed red;
+  width: 100%;
+}
+
+.card__divider {
+  display: block;
+  width: 100%;
+  height: 20px;
+
+  background-image: var(--divider-mobile);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
 
 .attribution {
   color: var(--c-tertiary);
