--- a/Junior/advice-generator-app-main/css/style.css
+++ b/Junior/advice-generator-app-main/css/style.css
@@ -7,6 +7,7 @@
   --c-primary: hsl(193, 38%, 86%);
   --c-secondary: hsl(150, 100%, 66%);
   --c-tertiary: hsl(217, 19%, 38%);
+  --c-btn-hover: hsla(150, 100%, 66%, 0.405);
 
   --ff: "Manrope", sans-serif;
   --fs-base: 1.75rem; /* 28px */
@@ -48,8 +49,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
+  position: relative;
+  z-index: 1;
 
-  padding: 2em;
+  padding: 2.3em 2em;
 }
 
 .sr-only {
@@ -82,6 +85,22 @@ body {
   background-size: contain;
 }
 
+.card__btn {
+  padding: 1.5em;
+  border-radius: 50%;
+  border: none;
+
+  position: absolute;
+  bottom: -10%;
+  z-index: 2;
+  background-color: var(--c-secondary);
+  transition: 0.2s ease-in-out;
+}
+
+.card__btn > img {
+  vertical-align: middle;
+}
+
 .attribution {
   color: var(--c-tertiary);
   font-size: calc(var(--fs-base) / 2.3);
@@ -104,7 +123,30 @@ body {
   color: var(--c-secondary);
 }
 
-@media screen (min-width: 600px) {
+@media (min-width: 600px) {
+  .card {
+    height: 10vmin;
+    width: 10vmin;
+    min-height: 10vmin;
+    min-height: 10vmin;
+    /* min-height: 85vmin;
+  min-width: 92vmin; */
+  }
+
+  button {
+    transition: all 0.2s ease-in-out;
+  }
+
+  button:hover {
+    box-shadow: 0 0 20px 10px var(--c-btn-hover);
+    cursor: pointer;
+    /* box-shadow: none|h-offset v-offset blur spread color  */
+  }
+
+  .card__divider {
+    background-image: var(--divider-dekstop);
+  }
+
   .attribution {
     bottom: 30%;
   }
