--- a/Junior/advice-generator-app-main/css/style.css
+++ b/Junior/advice-generator-app-main/css/style.css
@@ -48,11 +48,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 1em;
   position: relative;
   z-index: 1;
 
-  padding: 2.3em 2em;
+  padding: 3em 2em;
 }
 
 .sr-only {
@@ -63,15 +64,25 @@ body {
 .card__title {
   color: var(--c-secondary);
   text-transform: uppercase;
-  letter-spacing: 5px;
-  font-size: calc(var(--fs-base) / 3);
+  letter-spacing: 4px;
+  font-size: calc(var(--fs-base) / 2.5);
+  font-weight: 800;
+
+  padding: 1em;
+  position: absolute;
+  top: 9%;
 }
 
 /* .card__number{} */
 
 .card__advice {
-  border: 1px dashed red;
   width: 100%;
+  padding: 1em 0;
+
+  color: var(--c-primary);
+  text-align: center;
+  font-weight: 700;
+  font-size: calc(var(--fs-base) * 0.8);
 }
 
 .card__divider {
