Update img path

--- a/Junior/advice-generator-app-main/css/style.css
+++ b/Junior/advice-generator-app-main/css/style.css
@@ -12,8 +12,8 @@
   --ff: "Manrope", sans-serif;
   --fs-base: 1.75rem; /* 28px */
 
-  --divider-mobile: url(/images/pattern-divider-mobile.svg);
-  --divider-dekstop: url(/images/pattern-divider-desktop.svg);
+  --divider-mobile: url(../images/pattern-divider-mobile.svg);
+  --divider-dekstop: url(../images/pattern-divider-desktop.svg);
 }
 
 *,
