--- a/Junior/insure-land-page/src/index.css
+++ b/Junior/insure-land-page/src/index.css
@@ -1,3 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Karla:wght@400;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.font-headings {
+  font-family: "DM Serif Display", serif;
+}
+
+.font-body {
+  font-family: "Karla", sans-serif;
+}
