--- a/Junior/insure-land-page/src/index.css
+++ b/Junior/insure-land-page/src/index.css
@@ -4,10 +4,21 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    @apply font-body;
+  }
+}
+
 .font-headings {
   font-family: "DM Serif Display", serif;
 }
 
 .font-body {
   font-family: "Karla", sans-serif;
+  font-weight: 400;
+}
+
+.nav-container {
+  height: calc(100vh - 4rem);
 }
