Structure and style Hero component's desktop resolution, add animation

--- a/Junior/easybank-landing-page-main/src/components/Nav/Navbar.css
+++ b/Junior/easybank-landing-page-main/src/components/Nav/Navbar.css
@@ -63,9 +63,9 @@
   display: none;
 }
 
-/* .header__btn-mobile {
+.mobileNav__btn {
   display: none;
-} */
+}
 
 @media (max-width: 920px) {
   .header__content {
@@ -144,5 +144,13 @@
 
   .header__btn-mobile > *:hover {
     cursor: pointer;
+  }
+
+  .mobileNav__btn {
+    display: block;
+    position: absolute;
+    bottom: 3%;
+    left: 50%;
+    transform: translateX(-50%);
   }
 }
