--- a/Junior/easybank-landing-page-main/src/components/Hero/Hero.css
+++ b/Junior/easybank-landing-page-main/src/components/Hero/Hero.css
@@ -1,3 +1,67 @@
-main {
+.hero {
+  height: 80vh;
+  width: 100%;
+  padding-top: 4em;
+  display: flex;
+  justify-content: center;
+
   background-color: var(--c-neut-lightGray);
+  background-image: var(--bg-img-desktop);
+  background-repeat: no-repeat;
+  background-size: 1750px;
+  background-position: center center;
+  background-origin: content-box;
+  background-position: 570px -353px;
+  /* background-position: 43em -13em; */
+  /* background-position: 688px -208px; */
+}
+
+.hero__content,
+.content {
+  width: 100%;
+  max-width: var(--max-w-desktop);
+  min-width: var(--min-w-desktop);
+  height: 100%;
+}
+
+.hero__img {
+  position: absolute;
+  top: -6%;
+  right: -9.2%;
+}
+
+.content__description {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2em;
+}
+
+.content__heading {
+  font-size: 3rem;
+  line-height: 4rem;
+  font-family: var(--ff);
+  font-weight: 300;
+  color: var(--c-prime-blue);
+  padding-right: 2em;
+}
+
+.content__text {
+  color: var(--c-neut-blue);
+  font-size: 18px;
+  line-height: 28px;
+  padding-right: 5em;
+}
+
+@media (max-width: 920px) {
+  .hero {
+    background-image: var(--bg-img-mobile);
+  }
+
+  .hero__content,
+  .content {
+    /*  */
+  }
 }
