Structure and style Mobile navigation

--- a/Junior/easybank-landing-page-main/src/components/Navbar/Navbar.module.css
+++ b/Junior/easybank-landing-page-main/src/components/Navbar/Navbar.module.css
@@ -1,11 +1,21 @@
 .header {
-  border-bottom: 1px solid red;
   background-color: var(--neut-white);
-  height: 4em;
+  height: 5em;
   width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.header__content {
+  width: 100%;
+  max-width: 1100px;
+  margin: auto;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  background-color: var(--neut-white);
 }
 
 .header__logo {
@@ -17,4 +27,20 @@
 
 .header__logo a {
   cursor: pointer;
+}
+
+.header__btn {
+  display: block;
+}
+
+@media (max-width: 1024px) {
+  .header__content {
+    padding: var(--px-lg);
+  }
+}
+
+@media (max-width: 768px) {
+  .header__btn {
+    display: none;
+  }
 }
