--- a/Junior/easybank-landing-page-main/src/index.css
+++ b/Junior/easybank-landing-page-main/src/index.css
@@ -21,6 +21,8 @@
   --bg-desktop: url(./assets/images/bg-intro-desktop.svg);
   --bg-mobile: url(./assets/images/bg-intro-mobile.svg);
 
+  --px-lg: 0 1em;
+
   --transition: 0.2s linear;
 }
 
